searchbar: add more space for close button

--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -81,6 +81,8 @@
         </child>
         <child>
           <object class="GtkButton" id="close_button">
+            <property name="margin-start">6</property>
+            <property name="margin-end">6</property>
             <property name="action-name">search.hide</property>
             <property name="halign">center</property>
             <property name="valign">center</property>
