overview: add border to overview map

--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -39,6 +39,9 @@
                     <property name="hexpand">false</property>
                     <property name="visible">false</property>
                     <property name="view">view</property>
+                    <style>
+                      <class name="source-map"/>
+                    </style>
                   </object>
                 </child>
               </object>
