--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -114,3 +114,10 @@ notebook:focus:backdrop {
   margin: 0px;
   padding: 3px;
 }
+
+textview.source-map:dir(ltr) {
+  border-left: 1px solid @borders;
+}
+textview.source-map:dir(rtl) {
+  border-right: 1px solid @borders;
+}
