--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -36,6 +36,7 @@
                 </child>
                 <child>
                   <object class="GtkSourceMap" id="map">
+                    <property name="left-margin">12</property>
                     <property name="hexpand">false</property>
                     <property name="visible">false</property>
                     <property name="view">view</property>
