--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -129,95 +129,22 @@
               </object>
             </child>
             <child>
-              <object class="GtkBox" id="empty">
-                <style>
-                  <class name="empty-state"/>
-                </style>
-                <property name="hexpand">true</property>
-                <property name="vexpand">true</property>
-                <property name="halign">center</property>
-                <property name="valign">center</property>
-                <property name="orientation">vertical</property>
-                <property name="margin-top">32</property>
-                <property name="margin-start">32</property>
-                <property name="margin-end">32</property>
-                <property name="margin-bottom">32</property>
-                <child>
-                  <object class="GtkImage">
-                    <property name="icon-name">text-editor-symbolic</property>
-                    <property name="pixel-size">128</property>
-                    <property name="margin-start">24</property>
-                    <property name="margin-bottom">24</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
-                  </object>
-                </child>
-                <child>
+              <object class="AdwStatusPage" id="empty">
+                <property name="icon-name">text-editor-symbolic</property>
+                <property name="title" translatable="yes">Start or Open a Document</property>
+                <property name="child">
                   <object class="GtkLabel">
-                    <property name="label" translatable="yes">Start or Open a Document</property>
-                    <property name="margin-bottom">16</property>
-                    <property name="wrap">True</property>
-                    <property name="wrap-mode">word-char</property>
-                    <property name="justify">center</property>
-                    <style>
-                      <class name="title"/>
-                    </style>
                     <attributes>
-                      <attribute name="weight" value="bold"/>
-                      <attribute name="scale" value="1.8"/>
+                      <attribte name="" value=""/>
                     </attributes>
+                    <property name="label" translatable="yes">• Use the open button
+• Press the new tab button
+• Press Ctrl+N to start a new document
+• Press Ctrl+O to browse for a document
+
+Or, press Ctrl+W to close the window.</property>
                   </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="halign">start</property>
-                    <property name="label" translatable="yes">• Use the open button</property>
-                    <property name="margin-bottom">6</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="halign">start</property>
-                    <property name="label" translatable="yes">• Press the new tab button</property>
-                    <property name="margin-bottom">6</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="halign">start</property>
-                    <property name="label" translatable="yes">• Press Ctrl+N to start a new document</property>
-                    <property name="margin-bottom">6</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="halign">start</property>
-                    <property name="label" translatable="yes">• Press Ctrl+O to browse for a document</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="margin-top">24</property>
-                    <property name="halign">start</property>
-                    <property name="label" translatable="yes">Or, press Ctrl+W to close the window.</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
-                  </object>
-                </child>
+                </property>
               </object>
             </child>
           </object>
