window: move from GtkNotebook to AdwTabView
We are already using libadwaita, so we might as well use the new tabs too
so that we stay consistent.

Currently there are two sort of oddities:

 * We have to use "document-modified-symbolic" icon instead of the bullet
   for modified tracking, so we can use AdwTabPage:icon. This is not great
   currently in that it is only shown for the selected page.
 * Sometimes switching pages results in an empty frame until a size request
   comes in (at least on xorg/nvidia here). The gtk_widget_queue_resize()
   appears to make that go away, but maybe I'm just not hitting it now.

Possibly other issues, but better to test those now.

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -120,12 +120,19 @@
               <class name="view"/>
             </style>
             <child>
-              <object class="GtkNotebook" id="notebook">
-                <property name="scrollable">true</property>
-                <property name="show-border">false</property>
-                <property name="show-tabs">false</property>
-                <property name="hexpand">true</property>
-                <property name="vexpand">true</property>
+              <object class="GtkBox" id="pages">
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="AdwTabBar" id="tab_bar">
+                    <property name="view">tab_view</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="AdwTabView" id="tab_view">
+                    <property name="hexpand">true</property>
+                    <property name="vexpand">true</property>
+                  </object>
+                </child>
               </object>
             </child>
             <child>
