--- a/src/editor-sidebar-row.ui
+++ b/src/editor-sidebar-row.ui
@@ -39,6 +39,7 @@
             <property name="hexpand">true</property>
             <layout>
               <property name="column">1</property>
+              <property name="column-span">2</property>
             </layout>
           </object>
         </child>
@@ -56,15 +57,12 @@
             </attributes>
             <layout>
               <property name="row">1</property>
-              <property name="column">1</property>
-              <property name="column-span">2</property>
+              <property name="column">2</property>
             </layout>
           </object>
         </child>
         <child>
           <object class="GtkLabel" id="age">
-            <property name="label">2 hours ago</property>
-            <property name="margin-start">12</property>
             <property name="visible">true</property>
             <property name="valign">center</property>
             <property name="halign">end</property>
@@ -75,8 +73,8 @@
               <class name="dim-label"/>
             </style>
             <layout>
-              <property name="column">2</property>
-              <property name="row">0</property>
+              <property name="column">1</property>
+              <property name="row">1</property>
             </layout>
           </object>
         </child>
@@ -92,8 +90,9 @@
               <class name="flat"/>
             </style>
             <layout>
-              <property name="column">2</property>
-              <property name="row">1</property>
+              <property name="column">3</property>
+              <property name="row">0</property>
+              <property name="row-span">2</property>
             </layout>
           </object>
         </child>
