css: tweak close button size and visibility for touch
Fixes #105

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -70,13 +70,11 @@
 .org-gnome-TextEditor .open-popover listview row:last-child {
   border-bottom: 1px solid transparent;
 }
-.org-gnome-TextEditor .open-popover listview row:not(:hover) button {
-  opacity: 0;
-}
 .org-gnome-TextEditor .open-popover listview row button {
-  margin: 0px;
-  min-width: 16px;
-  min-height: 16px;
+  padding: 3px;
+  margin: 0;
+  min-height: 24px;
+  min-width: 24px;
 }
 
 
