settings: add support for highlighting the current line
For now, this can go in appearance in preferences. But should we want to,
we can move it elsewhere.

Fixes #106

--- a/src/editor-preferences-window.ui
+++ b/src/editor-preferences-window.ui
@@ -46,6 +46,12 @@
               </object>
             </child>
             <child>
+              <object class="EditorPreferencesSwitch" id="highlight_current_line">
+                <property name="title" translatable="yes">Highlight Current Line</property>
+                <property name="schema-key">highlight-current-line</property>
+              </object>
+            </child>
+            <child>
               <object class="EditorPreferencesSwitch" id="map">
                 <property name="title" translatable="yes">Display Overview Map</property>
                 <property name="schema-key">show-map</property>
