--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -12,6 +12,7 @@
         <child>
           <object class="GtkOverlay" id="overlay">
             <property name="vexpand">true</property>
+            <signal name="get-child-position" handler="get_child_position_cb"/>
             <child>
               <object class="GtkBox">
                 <property name="orientation">horizontal</property>
