--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -90,7 +90,7 @@
   border-bottom-width: 1px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  box-shadow: 0px 3px 5px 3px alpha(@borders,.35);
+  box-shadow: 0 0 3px 3px alpha(@borders,.35);
   margin: 0 10px 20px 10px;
 }
 .org-gnome-TextEditor page searchbar:backdrop {
