--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -17,6 +17,11 @@
               <property name="row">0</property>
               <property name="column">0</property>
             </layout>
+            <child>
+              <object class="GtkEventControllerKey">
+                <signal name="key-pressed" handler="on_search_key_pressed_cb"/>
+              </object>
+            </child>
           </object>
         </child>
         <child>
