--- a/src/editor-theme-selector.ui
+++ b/src/editor-theme-selector.ui
@@ -12,7 +12,7 @@
               <class name="theme-selector"/>
               <class name="light"/>
             </style>
-            <property name="can-focus">false</property>
+            <property name="focus-on-click">false</property>
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'light'</property>
             <property name="tooltip-text" translatable="yes">Light style</property>
@@ -25,7 +25,7 @@
               <class name="dark"/>
             </style>
             <property name="group">light</property>
-            <property name="can-focus">false</property>
+            <property name="focus-on-click">false</property>
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'dark'</property>
             <property name="tooltip-text" translatable="yes">Dark style</property>
