spellcheck: allow disabling spellcheck globally
This still allows for you to enable/disable it on a per-page basis with
the context menu.

--- a/src/menus.ui
+++ b/src/menus.ui
@@ -107,6 +107,10 @@
         <attribute name="action">settings.discover-settings</attribute>
       </item>
       <item>
+        <attribute name="label" translatable="yes">Chec_k Spelling</attribute>
+        <attribute name="action">settings.spellcheck</attribute>
+      </item>
+      <item>
         <attribute name="label" translatable="yes">_Highlight Mode</attribute>
         <attribute name="action">page.change-language</attribute>
       </item>
