--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -31,6 +31,7 @@
                         <property name="left-margin">12</property>
                         <property name="right-margin">16</property>
                         <property name="monospace">true</property>
+                        <property name="smart-backspace">true</property>
                       </object>
                     </child>
                   </object>
