help-overlay: add close document to shortcuts
Related #113

--- a/src/help-overlay.ui
+++ b/src/help-overlay.ui
@@ -86,6 +86,12 @@
                 <property name="accelerator">&lt;primary&gt;f</property>
               </object>
             </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes">Close document</property>
+                <property name="accelerator">&lt;control&gt;w</property>
+              </object>
+            </child>
           </object>
         </child>
         <child>
