help-overlay: prever control over primary
We don't even have support for using command on macOS anyway, currently.

--- a/src/help-overlay.ui
+++ b/src/help-overlay.ui
@@ -12,13 +12,13 @@
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes">New window</property>
-                <property name="accelerator">&lt;primary&gt;n</property>
+                <property name="accelerator">&lt;control&gt;n</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes">Move document to new window</property>
-                <property name="accelerator">&lt;primary&gt;&lt;shift&gt;n</property>
+                <property name="accelerator">&lt;control&gt;&lt;shift&gt;n</property>
               </object>
             </child>
             <child>
@@ -53,37 +53,37 @@
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes">New document</property>
-                <property name="accelerator">&lt;primary&gt;t</property>
+                <property name="accelerator">&lt;control&gt;t</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes">Browse to open document</property>
-                <property name="accelerator">&lt;primary&gt;o</property>
+                <property name="accelerator">&lt;control&gt;o</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes">Find document by name</property>
-                <property name="accelerator">&lt;primary&gt;k</property>
+                <property name="accelerator">&lt;control&gt;k</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes">Save</property>
-                <property name="accelerator">&lt;primary&gt;s</property>
+                <property name="accelerator">&lt;control&gt;s</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes">Save As</property>
-                <property name="accelerator">&lt;primary&gt;&lt;shift&gt;s</property>
+                <property name="accelerator">&lt;control&gt;&lt;shift&gt;s</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes">Find/Replace</property>
-                <property name="accelerator">&lt;primary&gt;f</property>
+                <property name="accelerator">&lt;control&gt;f</property>
               </object>
             </child>
             <child>
@@ -118,7 +118,7 @@
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes">Copy all to clipboard</property>
-                <property name="accelerator">&lt;primary&gt;&lt;shift&gt;c</property>
+                <property name="accelerator">&lt;control&gt;&lt;shift&gt;c</property>
               </object>
             </child>
           </object>
