menus: use control instead of primary

--- a/src/menus.ui
+++ b/src/menus.ui
@@ -10,7 +10,7 @@
       <item>
         <attribute name="label" translatable="yes">_New Window</attribute>
         <attribute name="action">app.new-window</attribute>
-        <attribute name="accel">&lt;primary&gt;n</attribute>
+        <attribute name="accel">&lt;control&gt;n</attribute>
       </item>
     </section>
     <section>
@@ -18,13 +18,13 @@
         <attribute name="id">save</attribute>
         <attribute name="label" translatable="yes">_Save</attribute>
         <attribute name="action">page.save</attribute>
-        <attribute name="accel">&lt;primary&gt;s</attribute>
+        <attribute name="accel">&lt;control&gt;s</attribute>
       </item>
       <item>
         <attribute name="id">save-as</attribute>
         <attribute name="label" translatable="yes">Save _As…</attribute>
         <attribute name="action">page.save-as</attribute>
-        <attribute name="accel">&lt;primary&gt;&lt;shift&gt;s</attribute>
+        <attribute name="accel">&lt;control&gt;&lt;shift&gt;s</attribute>
       </item>
     </section>
     <section>
@@ -32,7 +32,7 @@
         <attribute name="id">copy-all</attribute>
         <attribute name="label" translatable="yes">_Copy All</attribute>
         <attribute name="action">page.copy-all</attribute>
-        <attribute name="accel">&lt;primary&gt;&lt;shift&gt;c</attribute>
+        <attribute name="accel">&lt;control&gt;&lt;shift&gt;c</attribute>
       </item>
       <item>
         <attribute name="id">discard-changes</attribute>
@@ -42,7 +42,7 @@
       <item>
         <attribute name="label" translatable="yes">_Find/Replace…</attribute>
         <attribute name="action">page.begin-search</attribute>
-        <attribute name="accel">&lt;primary&gt;f</attribute>
+        <attribute name="accel">&lt;control&gt;f</attribute>
       </item>
     </section>
     <section>
@@ -50,7 +50,7 @@
         <attribute name="id">print</attribute>
         <attribute name="label" translatable="yes">_Print…</attribute>
         <attribute name="action">page.print</attribute>
-        <attribute name="accel">&lt;primary&gt;p</attribute>
+        <attribute name="accel">&lt;control&gt;p</attribute>
       </item>
     </section>
     <section>
