window: add tooltip for document properties
Related #113

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -97,6 +97,7 @@
                 </child>
                 <child>
                   <object class="GtkMenuButton" id="options_menu">
+                    <property name="tooltip-text" translatable="yes">Document Properties</property>
                     <property name="icon-name">document-properties-symbolic</property>
                   </object>
                 </child>
