window: use "View" instead of "Document Properties"
This probably matches more closely to what the menu would have been.

Fixes #116

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -97,7 +97,7 @@
                 </child>
                 <child>
                   <object class="GtkMenuButton" id="options_menu">
-                    <property name="tooltip-text" translatable="yes">Document Properties</property>
+                    <property name="tooltip-text" translatable="yes">View</property>
                     <property name="icon-name">document-properties-symbolic</property>
                   </object>
                 </child>
