--- a/help/C/basics-open-file.page
+++ b/help/C/basics-open-file.page
@@ -13,4 +13,17 @@
   <p>To open a file in GNOME Text Editor use <gui>Open</gui> in the Headerbar
   and <gui>Browse Files...</gui> or the shortcut <keyseq><key>Ctrl</key><key>O</key></keyseq>.
   </p>
+
+  <p>In the dialog choose your file(s) you want to open and click <gui>Open</gui>.
+  It is possible to select multiple files to open these at once.</p>
+
+  <p>Closing the dialog without opening a file can be archived by clicking <gui>Cancel</gui>.</p>
+
+  <section>
+    <title>Open by name</title>
+
+    <p>You can search in the <gui>Open Popup</gui> or press <keyseq><key>Ctrl</key><key>K</key></keyseq> to search for recently edited files.</p>
+
+    <media type="image" src="media/search-recent.png"/>
+  </section>
 </page>
