--- a/help/C/basics-open-file.page
+++ b/help/C/basics-open-file.page
@@ -17,7 +17,7 @@
   <p>In the dialog choose your file(s) you want to open and click <gui>Open</gui>.
   It is possible to select multiple files to open these at once.</p>
 
-  <p>Closing the dialog without opening a file can be archived by clicking <gui>Cancel</gui>.</p>
+  <p>Closing the dialog without opening a file can be achieved by clicking <gui>Cancel</gui>.</p>
 
   <section>
     <title>Open by name</title>
