--- a/src/help-overlay.ui
+++ b/src/help-overlay.ui
@@ -5,90 +5,90 @@
     <child>
       <object class="GtkShortcutsSection">
         <property name="section-name">editor</property>
-        <property name="title" translatable="yes">Editor Shortcuts</property>
+        <property name="title" translatable="yes" context="shortcut window">Editor Shortcuts</property>
         <child>
           <object class="GtkShortcutsGroup">
-            <property name="title" translatable="yes">Windows</property>
+            <property name="title" translatable="yes" context="shortcut window">Windows</property>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes">New window</property>
+                <property name="title" translatable="yes" context="shortcut window">New window</property>
                 <property name="accelerator">&lt;control&gt;n</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes">Move document to new window</property>
+                <property name="title" translatable="yes" context="shortcut window">Move document to new window</property>
                 <property name="accelerator">&lt;control&gt;&lt;shift&gt;n</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;Page_Down</property>
-                <property name="title" translatable="yes">Move to next tab</property>
+                <property name="title" translatable="yes" context="shortcut window">Move to next tab</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;Page_Up</property>
-                <property name="title" translatable="yes">Move to previous tab</property>
+                <property name="title" translatable="yes" context="shortcut window">Move to previous tab</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;&lt;shift&gt;Page_Down</property>
-                <property name="title" translatable="yes">Reorder after next tab</property>
+                <property name="title" translatable="yes" context="shortcut window">Reorder after next tab</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;&lt;shift&gt;Page_Up</property>
-                <property name="title" translatable="yes">Reorder before previous tab</property>
+                <property name="title" translatable="yes" context="shortcut window">Reorder before previous tab</property>
               </object>
             </child>
           </object>
         </child>
         <child>
           <object class="GtkShortcutsGroup">
-            <property name="title" translatable="yes">Documents</property>
+            <property name="title" translatable="yes" context="shortcut window">Documents</property>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes">New document</property>
+                <property name="title" translatable="yes" context="shortcut window">New document</property>
                 <property name="accelerator">&lt;control&gt;t</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes">Browse to open document</property>
+                <property name="title" translatable="yes" context="shortcut window">Browse to open document</property>
                 <property name="accelerator">&lt;control&gt;o</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes">Find document by name</property>
+                <property name="title" translatable="yes" context="shortcut window">Find document by name</property>
                 <property name="accelerator">&lt;control&gt;k</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes">Save</property>
+                <property name="title" translatable="yes" context="shortcut window">Save</property>
                 <property name="accelerator">&lt;control&gt;s</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes">Save As</property>
+                <property name="title" translatable="yes" context="shortcut window">Save As</property>
                 <property name="accelerator">&lt;control&gt;&lt;shift&gt;s</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes">Find/Replace</property>
+                <property name="title" translatable="yes" context="shortcut window">Find/Replace</property>
                 <property name="accelerator">&lt;control&gt;f</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes">Close document</property>
+                <property name="title" translatable="yes" context="shortcut window">Close document</property>
                 <property name="accelerator">&lt;control&gt;w</property>
               </object>
             </child>
@@ -96,28 +96,28 @@
         </child>
         <child>
           <object class="GtkShortcutsGroup">
-            <property name="title" translatable="yes">Copy and Paste</property>
+            <property name="title" translatable="yes" context="shortcut window">Copy and Paste</property>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;c</property>
-                <property name="title" translatable="yes">Copy selected text to clipboard</property>
+                <property name="title" translatable="yes" context="shortcut window">Copy selected text to clipboard</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;x</property>
-                <property name="title" translatable="yes">Cut selected text to clipboard</property>
+                <property name="title" translatable="yes" context="shortcut window">Cut selected text to clipboard</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;v</property>
-                <property name="title" translatable="yes">Paste text from clipboard</property>
+                <property name="title" translatable="yes" context="shortcut window">Paste text from clipboard</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes">Copy all to clipboard</property>
+                <property name="title" translatable="yes" context="shortcut window">Copy all to clipboard</property>
                 <property name="accelerator">&lt;control&gt;&lt;shift&gt;c</property>
               </object>
             </child>
@@ -125,151 +125,151 @@
         </child>
         <child>
           <object class="GtkShortcutsGroup">
-            <property name="title" translatable="yes">Undo and Redo</property>
+            <property name="title" translatable="yes" context="shortcut window">Undo and Redo</property>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;z</property>
-                <property name="title" translatable="yes">Undo previous command</property>
+                <property name="title" translatable="yes" context="shortcut window">Undo previous command</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;&lt;shift&gt;z</property>
-                <property name="title" translatable="yes">Redo previous command</property>
+                <property name="title" translatable="yes" context="shortcut window">Redo previous command</property>
               </object>
             </child>
           </object>
         </child>
         <child>
           <object class="GtkShortcutsGroup">
-            <property name="title" translatable="yes">Editing</property>
+            <property name="title" translatable="yes" context="shortcut window">Editing</property>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;period</property>
-                <property name="title" translatable="yes">Insert emoji into document</property>
+                <property name="title" translatable="yes" context="shortcut window">Insert emoji into document</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;f</property>
-                <property name="title" translatable="yes">Search within the document</property>
+                <property name="title" translatable="yes" context="shortcut window">Search within the document</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;h</property>
-                <property name="title" translatable="yes">Search and replace within the document</property>
+                <property name="title" translatable="yes" context="shortcut window">Search and replace within the document</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;&lt;shift&gt;a</property>
-                <property name="title" translatable="yes">Increment number at cursor</property>
+                <property name="title" translatable="yes" context="shortcut window">Increment number at cursor</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;&lt;shift&gt;x</property>
-                <property name="title" translatable="yes">Decrement number at cursor</property>
+                <property name="title" translatable="yes" context="shortcut window">Decrement number at cursor</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">Insert</property>
-                <property name="title" translatable="yes">Toggle overwrite</property>
+                <property name="title" translatable="yes" context="shortcut window">Toggle overwrite</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">F7</property>
-                <property name="title" translatable="yes">Toggle visibility of insertion caret</property>
+                <property name="title" translatable="yes" context="shortcut window">Toggle visibility of insertion caret</property>
               </object>
             </child>
           </object>
         </child>
         <child>
           <object class="GtkShortcutsGroup">
-            <property name="title" translatable="yes">Selections</property>
+            <property name="title" translatable="yes" context="shortcut window">Selections</property>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;a</property>
-                <property name="title" translatable="yes">Select all</property>
+                <property name="title" translatable="yes" context="shortcut window">Select all</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;&lt;shift&gt;a</property>
-                <property name="title" translatable="yes">Unselect all</property>
+                <property name="title" translatable="yes" context="shortcut window">Unselect all</property>
               </object>
             </child>
           </object>
         </child>
         <child>
           <object class="GtkShortcutsGroup">
-            <property name="title" translatable="yes">Movements</property>
+            <property name="title" translatable="yes" context="shortcut window">Movements</property>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;Home</property>
-                <property name="title" translatable="yes">Move to beginning of document</property>
+                <property name="title" translatable="yes" context="shortcut window">Move to beginning of document</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;End</property>
-                <property name="title" translatable="yes">Move to end of document</property>
+                <property name="title" translatable="yes" context="shortcut window">Move to end of document</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;Up</property>
-                <property name="title" translatable="yes">Move to start of previous paragraph</property>
+                <property name="title" translatable="yes" context="shortcut window">Move to start of previous paragraph</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;Down</property>
-                <property name="title" translatable="yes">Move to end of next paragraph</property>
+                <property name="title" translatable="yes" context="shortcut window">Move to end of next paragraph</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;alt&gt;Up</property>
-                <property name="title" translatable="yes">Move current or selected lines up</property>
+                <property name="title" translatable="yes" context="shortcut window">Move current or selected lines up</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;alt&gt;Down</property>
-                <property name="title" translatable="yes">Move current or selected lines down</property>
+                <property name="title" translatable="yes" context="shortcut window">Move current or selected lines down</property>
               </object>
             </child>
           </object>
         </child>
         <child>
           <object class="GtkShortcutsGroup">
-            <property name="title" translatable="yes">Deletion</property>
+            <property name="title" translatable="yes" context="shortcut window">Deletion</property>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;BackSpace</property>
-                <property name="title" translatable="yes">Delete from cursor to word start</property>
+                <property name="title" translatable="yes" context="shortcut window">Delete from cursor to word start</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;Delete</property>
-                <property name="title" translatable="yes">Delete from cursor to word end</property>
+                <property name="title" translatable="yes" context="shortcut window">Delete from cursor to word end</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;&lt;shift&gt;BackSpace</property>
-                <property name="title" translatable="yes">Delete from cursor to paragraph start</property>
+                <property name="title" translatable="yes" context="shortcut window">Delete from cursor to paragraph start</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="accelerator">&lt;ctrl&gt;&lt;shift&gt;Delete</property>
-                <property name="title" translatable="yes">Delete from cursor to paragraph end</property>
+                <property name="title" translatable="yes" context="shortcut window">Delete from cursor to paragraph end</property>
               </object>
             </child>
           </object>
