--- a/src/menus.ui
+++ b/src/menus.ui
@@ -63,6 +63,10 @@
         <attribute name="action">win.show-help-overlay</attribute>
       </item>
       <item>
+        <attribute name="label" translatable="yes">Help</attribute>
+        <attribute name="action">app.help</attribute>
+      </item>
+      <item>
         <attribute name="label" translatable="yes">_About Text Editor</attribute>
         <attribute name="action">app.about</attribute>
       </item>
