window: implement preferences as sidepanel in window
This does the first part of things to allow selecting an alternate
style-scheme by moving the preferences into the window for live and
direct application/preview.

Related #79

--- a/src/menus.ui
+++ b/src/menus.ui
@@ -56,7 +56,7 @@
     <section>
       <item>
         <attribute name="label" translatable="yes">_Preferences</attribute>
-        <attribute name="action">app.preferences</attribute>
+        <attribute name="action">win.show-preferences</attribute>
       </item>
       <item>
         <attribute name="label" translatable="yes">_Keyboard Shortcuts</attribute>
