help: first basic chapters

--- a/help/C/index.page
+++ b/help/C/index.page
@@ -33,7 +33,12 @@
 
   <section id="basics">
     <title>Basics</title>
-    <links type="topic"/>
+    <links type="topic" style="2column"/>
+  </section>
+
+  <section id="edit">
+    <title>Edit files</title>
+    <links type="topic" style="2column"/>
   </section>
 
 </page>
