--- a/help/C/basics-open-file.page
+++ b/help/C/basics-open-file.page
@@ -7,10 +7,10 @@
   </info>
 
   <title>
-    Open a file in GNOME Text Editor
+    Open a file
   </title>
 
-  <p>To open a file in GNOME Text Editor use <gui>Open</gui> in the Headerbar
+  <p>To open a file in GNOME Text Editor use <gui style="button">Open</gui> in the Headerbar
   and <gui>Browse Files...</gui> or the shortcut <keyseq><key>Ctrl</key><key>O</key></keyseq>.
   </p>
 
@@ -19,10 +19,10 @@
 
   <p>Closing the dialog without opening a file can be achieved by clicking <gui>Cancel</gui>.</p>
 
-  <section>
+  <section id="by_name">
     <title>Open by name</title>
 
-    <p>You can search in the <gui>Open Popup</gui> or press <keyseq><key>Ctrl</key><key>K</key></keyseq> to search for recently edited files.</p>
+    <p>You can search in the <gui>Open</gui> Popup or press <keyseq><key>Ctrl</key><key>K</key></keyseq> to search for recently edited files.</p>
 
     <media type="image" src="media/search-recent.png"/>
   </section>
