window: unify page closing handling
This makes sure that ctrl+w and close-page signal via clicking the X result
in the same process flow.

I thought there might be an issue with editor_session_remove_page() not
being called, but it seems to work itself out correctly anyway.

Fixes #118

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -131,6 +131,7 @@
                       <object class="AdwTabView" id="tab_view">
                         <property name="hexpand">true</property>
                         <property name="vexpand">true</property>
+                        <signal name="close-page" handler="on_tab_view_close_page_cb" swapped="true"/>
                       </object>
                     </child>
                   </object>
