Write "open" and "new tab" with big starting character and change "use" to "open"

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -142,8 +142,8 @@
                     <property name="title" translatable="yes">Start or Open a Document</property>
                     <property name="child">
                       <object class="GtkLabel">
-                        <property name="label" translatable="yes">• Use the open button
-• Press the new tab button
+                        <property name="label" translatable="yes">• Press the Open button
+• Press the New tab button
 • Press Ctrl+N to start a new document
 • Press Ctrl+O to browse for a document
 
