--- a/help/C/basics-draft-folder.page
+++ b/help/C/basics-draft-folder.page
@@ -15,7 +15,7 @@
 
     <link type="guide" xref="index#basics"/>
 
-    <desc>Explaination of the drafts folder.</desc>
+    <desc>Explanation of the drafts folder.</desc>
 
     <keywords>draft, folder</keywords>
   </info>
