Make the menu buttons more accessible by introducing proper a11y labels

--- a/src/editor-theme-selector.ui
+++ b/src/editor-theme-selector.ui
@@ -16,6 +16,9 @@
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'light'</property>
             <property name="tooltip-text" translatable="yes">Light style</property>
+            <accessibility>
+              <property name="label" translatable="yes">Light style</property>
+            </accessibility>
           </object>
         </child>
         <child>
@@ -29,6 +32,9 @@
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'dark'</property>
             <property name="tooltip-text" translatable="yes">Dark style</property>
+            <accessibility>
+              <property name="label" translatable="yes">Dark style</property>
+            </accessibility>
           </object>
         </child>
       </object>
