searchbar: fix navigation with arrows
This broke in the GTK 4 port so there wasn't a way to navigate with
arrows as we expected.

Related #156

--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -19,6 +19,7 @@
             </layout>
             <child>
               <object class="GtkEventControllerKey">
+                <property name="propagation-phase">capture</property>
                 <signal name="key-pressed" handler="on_search_key_pressed_cb"/>
               </object>
             </child>
