css: tweak searchbar shadow
This looks a bit closer to Adwaita coloring and spread.

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -90,7 +90,7 @@
   border-bottom-width: 1px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  box-shadow: 0 0 3px 1px alpha(shade(@borders,0.8),.35);
+  box-shadow: 0 0 5px 1px rgba(0,0,0,0.09);
   margin: 0 10px 20px 10px;
 }
 .org-gnome-TextEditor page .searchbar:backdrop {
