preferences: use AdwFlap
Currently this moves the preferences to the left, which isn't what our
design had in mind, but perhaps that can be changed later.

Fixes #174

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -109,3 +109,7 @@ textview.source-map:dir(ltr) {
 textview.source-map:dir(rtl) {
   border-right: 1px solid @borders;
 }
+
+flap > scrolledwindow.preferences > viewport {
+  background: @theme_bg_color;
+}
