--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -120,9 +120,15 @@
           </object>
         </child>
         <child>
-          <object class="GtkBox">
-            <property name="orientation">horizontal</property>
-            <child>
+          <object class="AdwFlap" id="flap">
+            <property name="transition-type">over</property>
+            <property name="reveal-flap">false</property>
+            <child type="separator">
+              <object class="GtkSeparator">
+                <property name="orientation">vertical</property>
+              </object>
+            </child>
+            <child type="content">
               <object class="GtkStack" id="stack">
                 <property name="hexpand">true</property>
                 <style>
@@ -163,117 +169,105 @@ Or, press Ctrl+W to close the window.</property>
                 </child>
               </object>
             </child>
-            <child>
-              <object class="GtkRevealer" id="preferences_revealer">
-                <property name="transition-type">slide-left</property>
+            <child type="flap">
+              <object class="GtkScrolledWindow">
+                <property name="propagate-natural-width">true</property>
+                <property name="propagate-natural-height">true</property>
+                <property name="hscrollbar-policy">never</property>
+                <style>
+                  <class name="preferences"/>
+                </style>
                 <child>
                   <object class="GtkBox">
-                    <property name="orientation">horizontal</property>
+                    <property name="orientation">vertical</property>
+                    <property name="width-request">300</property>
+                    <property name="margin-start">12</property>
+                    <property name="margin-end">12</property>
+                    <property name="margin-top">12</property>
+                    <property name="margin-bottom">12</property>
                     <child>
-                      <object class="GtkSeparator">
-                        <property name="orientation">vertical</property>
+                      <object class="GtkCenterBox">
+                        <property name="orientation">horizontal</property>
+                        <child type="center">
+                          <object class="GtkLabel">
+                            <property name="label" translatable="yes">Preferences</property>
+                            <property name="xalign">.5</property>
+                            <attributes>
+                              <attribute name="weight" value="bold"/>
+                            </attributes>
+                          </object>
+                        </child>
+                        <child type="end">
+                          <object class="GtkButton">
+                            <property name="icon-name">window-close-symbolic</property>
+                            <property name="action-name">win.hide-preferences</property>
+                            <style>
+                              <class name="image-button"/>
+                              <class name="circular"/>
+                              <class name="flat"/>
+                            </style>
+                          </object>
+                        </child>
                       </object>
                     </child>
                     <child>
-                      <object class="GtkScrolledWindow">
-                        <property name="propagate-natural-width">true</property>
-                        <property name="propagate-natural-height">true</property>
-                        <property name="hscrollbar-policy">never</property>
+                      <object class="AdwPreferencesGroup">
+                        <property name="title" translatable="yes">Font</property>
+                        <property name="margin-top">12</property>
                         <child>
-                          <object class="GtkBox">
-                            <property name="orientation">vertical</property>
-                            <property name="width-request">300</property>
-                            <property name="margin-start">12</property>
-                            <property name="margin-end">12</property>
-                            <property name="margin-top">12</property>
-                            <property name="margin-bottom">12</property>
-                            <child>
-                              <object class="GtkCenterBox">
-                                <property name="orientation">horizontal</property>
-                                <child type="center">
-                                  <object class="GtkLabel">
-                                    <property name="label" translatable="yes">Preferences</property>
-                                    <property name="xalign">.5</property>
-                                    <attributes>
-                                      <attribute name="weight" value="bold"/>
-                                    </attributes>
-                                  </object>
-                                </child>
-                                <child type="end">
-                                  <object class="GtkButton">
-                                    <property name="icon-name">window-close-symbolic</property>
-                                    <property name="action-name">win.hide-preferences</property>
-                                    <style>
-                                      <class name="image-button"/>
-                                      <class name="circular"/>
-                                      <class name="flat"/>
-                                    </style>
-                                  </object>
-                                </child>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="AdwPreferencesGroup">
-                                <property name="title" translatable="yes">Font</property>
-                                <property name="margin-top">12</property>
-                                <child>
-                                  <object class="EditorPreferencesSwitch" id="use_system_font">
-                                    <property name="title" translatable="yes">Use System Font</property>
-                                    <property name="schema-key">use-system-font</property>
-                                  </object>
-                                </child>
-                                <child>
-                                  <object class="EditorPreferencesFont" id="custom_font">
-                                    <property name="title" translatable="yes">Custom Font</property>
-                                    <property name="schema-key">custom-font</property>
-                                    <property name="sensitive" bind-source="use_system_font" bind-property="active" bind-flags="sync-create|invert-boolean"/>
-                                  </object>
-                                </child>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="AdwPreferencesGroup">
-                                <property name="title" translatable="yes">Right Margin</property>
-                                <property name="margin-top">24</property>
-                                <child>
-                                  <object class="EditorPreferencesSpin" id="right_margin">
-                                    <property name="title" translatable="yes">Margin Position</property>
-                                    <property name="schema-key">right-margin-position</property>
-                                  </object>
-                                </child>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="AdwPreferencesGroup">
-                                <property name="title" translatable="yes">Appearance</property>
-                                <property name="margin-top">24</property>
-                                <child>
-                                  <object class="EditorPreferencesSwitch" id="grid">
-                                    <property name="title" translatable="yes">Display Grid Pattern</property>
-                                    <property name="schema-key">show-grid</property>
-                                  </object>
-                                </child>
-                                <child>
-                                  <object class="EditorPreferencesSwitch" id="highlight_current_line">
-                                    <property name="title" translatable="yes">Highlight Current Line</property>
-                                    <property name="schema-key">highlight-current-line</property>
-                                  </object>
-                                </child>
-                                <child>
-                                  <object class="EditorPreferencesSwitch" id="map">
-                                    <property name="title" translatable="yes">Display Overview Map</property>
-                                    <property name="schema-key">show-map</property>
-                                  </object>
-                                </child>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="AdwPreferencesGroup" id="scheme_group">
-                                <property name="margin-top">12</property>
-                              </object>
-                            </child>
+                          <object class="EditorPreferencesSwitch" id="use_system_font">
+                            <property name="title" translatable="yes">Use System Font</property>
+                            <property name="schema-key">use-system-font</property>
                           </object>
                         </child>
+                        <child>
+                          <object class="EditorPreferencesFont" id="custom_font">
+                            <property name="title" translatable="yes">Custom Font</property>
+                            <property name="schema-key">custom-font</property>
+                            <property name="sensitive" bind-source="use_system_font" bind-property="active" bind-flags="sync-create|invert-boolean"/>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwPreferencesGroup">
+                        <property name="title" translatable="yes">Right Margin</property>
+                        <property name="margin-top">24</property>
+                        <child>
+                          <object class="EditorPreferencesSpin" id="right_margin">
+                            <property name="title" translatable="yes">Margin Position</property>
+                            <property name="schema-key">right-margin-position</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwPreferencesGroup">
+                        <property name="title" translatable="yes">Appearance</property>
+                        <property name="margin-top">24</property>
+                        <child>
+                          <object class="EditorPreferencesSwitch" id="grid">
+                            <property name="title" translatable="yes">Display Grid Pattern</property>
+                            <property name="schema-key">show-grid</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="EditorPreferencesSwitch" id="highlight_current_line">
+                            <property name="title" translatable="yes">Highlight Current Line</property>
+                            <property name="schema-key">highlight-current-line</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="EditorPreferencesSwitch" id="map">
+                            <property name="title" translatable="yes">Display Overview Map</property>
+                            <property name="schema-key">show-map</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwPreferencesGroup" id="scheme_group">
+                        <property name="margin-top">12</property>
                       </object>
                     </child>
                   </object>
