window: lock flap when not in use
Fixes #174

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -124,6 +124,7 @@
             <property name="flap-position">end</property>
             <property name="transition-type">over</property>
             <property name="reveal-flap">false</property>
+            <property name="locked">true</property>
             <child type="separator">
               <object class="GtkSeparator">
                 <property name="orientation">vertical</property>
