searchbar: simplify search movements
This moves a bunch of our special case keybindings to the search entry
which is where people are actually typing for search movements. We don't
do this for the replace entry because that'd require disambiguating replace
one with replace all.

Additionally, we use Return/Enter to move to the next search result which
feels a bit more natural to users coming from other systems. Using Control
with Return/Enter will move you to the next result and dismiss the search
bar.

You can use Shift combined with Return/Enter to move backwards, and with
Control Return/Enter to move backwards and dismiss the search bar.

Hitting escape without moving to a search result will rubberband you back
to where you started the search. While hitting escape after having moved
to a search result will land you on the current search result.

Fixes #177 and #156

--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -12,7 +12,6 @@
         <child>
           <object class="EditorSearchEntry" id="search_entry">
             <property name="hexpand">true</property>
-            <signal name="activate" handler="editor_search_bar_search_activate_cb" swapped="true" object="EditorSearchBar"/>
             <layout>
               <property name="row">0</property>
               <property name="column">0</property>
@@ -47,14 +46,14 @@
             </style>
             <child>
               <object class="GtkButton">
-                <property name="action-name">search.move-previous</property>
+                <property name="action-name">search.move-previous(false)</property>
                 <property name="tooltip-text" translatable="yes">Move to previous match (Ctrl+Shift+G)</property>
                 <property name="icon-name">go-up-symbolic</property>
               </object>
             </child>
             <child>
               <object class="GtkButton">
-                <property name="action-name">search.move-next</property>
+                <property name="action-name">search.move-next(false)</property>
                 <property name="tooltip-text" translatable="yes">Move to next match (Ctrl+G)</property>
                 <property name="icon-name">go-down-symbolic</property>
               </object>
